kustomize/overlays/dev/patch-deployment-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  template:
    spec:
      containers:
        - name: springboot-postgres
          image: sugesh23/springboot-postgres:feature-development-a6ba9a3
